--- a/IdentityServer/Properties/launchSettings.json
+++ b/IdentityServer/Properties/launchSettings.json
@@ -1,14 +1,12 @@
 {
   "profiles": {
-    "Movies.API": {
+    "IdentityServer": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:5001"
+      "applicationUrl": "https://localhost:5005"
     }
   }
 }
