--- a/Movies.Client/appsettings.json
+++ b/Movies.Client/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MoviesClientContext": "Server=(localdb)\\mssqllocaldb;Database=Movies.Client.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
